--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^9.6.6",
     "node-fetch": "2",
     "puppeteer": "^13.2.0"
   }
